fixes side bar style on mobile

--- a/styles/components/ui/_navbar.scss
+++ b/styles/components/ui/_navbar.scss
@@ -46,9 +46,5 @@
     a.btn {
       display: none;
     }
-
-    .nav-logo {
-      width: 1%;
-    }
   }
 }
