--- a/styles/components/ui/_sidebar-menu-section.scss
+++ b/styles/components/ui/_sidebar-menu-section.scss
@@ -15,6 +15,8 @@
   padding-top: 5px !important;
   padding-bottom: 5px !important;
 
+  display: inline-block;
+
   &:hover {
     text-decoration: underline;
     text-decoration-style: dotted;
